# namegen-bot

./: CHANGELOG.md  LICENSE  README.md  namegen-bot.cabal  stack.yaml
lib/: Namegen.hs
src/: Main.hs
