name:                namegen-bot
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Josiah VanderZee
maintainer:          josiah_vanderzee@mediacombb.net
copyright:           2022 Josiah VanderZee
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md

executable namegen-bot
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , datetime
                     , text
                     , uuid
                     , matrix-client >= 0.1.4.3
                     , namegen
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

library namegen
  hs-source-dirs:      lib
  exposed-modules:     Namegen
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
  ghc-options:         -Wall
